k8s/01-shared-infra.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  ports:
  - port: 2181
    targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.5.0
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
  - port: 29092
    name: internal
    targetPort: 29092
  - port: 9092
    name: external
    targetPort: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      enableServiceLinks: false
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.5.0
        ports:
        - containerPort: 9092
        - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: order-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: order-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-redis
  template:
    metadata:
      labels:
        app: order-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
