k8s/03-apps.yaml
# --- WAREHOUSE SERVICE ---
apiVersion: v1
kind: Service
metadata:
  name: warehouse-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: warehouse-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse-app
  template:
    metadata:
      labels:
        app: warehouse-app
    spec:
      containers:
      - name: warehouse-app
        image: papitonregistry.azurecr.io/warehouse-and-inventory-service:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: shipping-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-app
  template:
    metadata:
      labels:
        app: shipping-app
    spec:
      containers:
      - name: shipping-app
        image: papitonregistry.azurecr.io/shipping-service:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: order-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      labels:
        app: order-app
    spec:
      containers:
      - name: order-app
        image: papitonregistry.azurecr.io/order-tariff-service:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tracking-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: tracking-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-app
  template:
    metadata:
      labels:
        app: tracking-app
    spec:
      containers:
      - name: tracking-app
        image: papitonregistry.azurecr.io/tracking-and-logevent-service:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: notification-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-app
  template:
    metadata:
      labels:
        app: notification-app
    spec:
      containers:
      - name: notification-app
        image: papitonregistry.azurecr.io/notification-and-messaging-service:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: etl-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8085
  selector:
    app: etl-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl-service
  template:
    metadata:
      labels:
        app: etl-service
    spec:
      containers:
      - name: etl-service
        image: papitonregistry.azurecr.io/etl-pipeline:v1
        ports:
        - containerPort: 8085
