k8s/04-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-app
spec:
  type: ClusterIP
  selector:
    app: dashboard-app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dashboard-app

  template:
    metadata:
      labels:
        app: dashboard-app

    spec:
      containers:
        - name: dashboard-app
          image: papitonregistry.azurecr.io/dashboard:v1

          ports:
            - containerPort: 80
